force-app/main/default/objects/OpportunityLineItem__c/OpportunityLineItem__c.object-meta.xml
<CustomObject>
    <label>OpportunityLineItem</label>
    <nameField>
        <label>OpportunityLineItem Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OpportunityLineItems</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>